@@ -4,6 +4,7 @@ ver 0.23.13 (not yet released)
 * archive
   - zzip: fix crash bug
 * decoder
+  - ffmpeg: reorder to a lower priority than "gme"
   - gme: require GME 0.6 or later
 * output
   - pipewire: fix corruption bug due to missing lock
